Update JDK 11